# ATS-UCE

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SYNC_REPORT.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  erik_herrera_backend_tasks.md  package-lock.json  resumen-proyecto.md
backend/: .dockerignore  .env.bak  .env.example  .gitignore  API_CONTRACT.md  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
backend/.atl/: skill-registry.md
backend/app/api/: dependencies.py
backend/app/domain/: exceptions.py
backend/app/infrastructure/: user_role_store.py
backend/docs/: API_CONTRACT.md  ai-prompt-design.md  auth-flow-design.md  auth-flow-diagram.md  background-task-design.md  estado-funcional-backend.md  pdf-extraction-design.md
backend/docs/adr/: ADR-001-clean-architecture-ddd.md  ADR-002-fastapi-asyncpg.md  ADR-003-postgresql-database.md  ADR-004-sqlalchemy-orm.md  ADR-005-clerk-authentication.md  ADR-006-docker-deployment.md
backend/migrations/: env.py
backend/migrations/versions/: 20260601_2014-6266e64284a0_initial.py  20260608_0134-db797a2bbb72_initial.py  20260608_1840-5fdbaeab0d16_create_all_tables.py  20260609_0811-ce8e2c082f1a_initial_auth.py  20260610_2047-c09a9c2412a8_initial.py  20260625_0558-a0e3b37edc40_add_error_reason_to_applications.py  20260628_0300-a1b2c3d4e5f6_add_performance_indexes.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_ai_scoring.py  test_application_repository.py  (+4 more)
(+172 files in other folders)
