[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ats-uce-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pymupdf>=1.24.0",
    "openai>=1.54.0",
    "boto3>=1.35.0",
    "b2sdk>=2.0.0",
    "resend>=2.4.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "clerk-backend-api>=1.0.0",
    "email-validator>=2.3.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a PostgreSQL database",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.0",
]
